--- a/HW1/hw1.Rmd
+++ b/HW1/hw1.Rmd
@@ -156,25 +156,20 @@ player will have a better chance of winning by always switching the door
 
 ## Problem 3
 
-First, we use a Bayesian Network to represent their relationships. We
-use the following information to construct this DAG.
+First, we use a Bayesian Network to represent their relationships. Based on the significance of age ($X$) and country ($Y$), we set them as Markovian parents of most variables.
 
 DAG:
-```{r p3}
+```{r p3, fig.height=5, fig.width=5, fig.align='center'}
 Sys.setenv(LANGUAGE = "en")
 library(dagitty)
 library(ggdag)
 dag <- dagitty::dagitty("
        dag{
        Y->X
-       Y->Z
-       X->Z
-       Y->U
-       X->U
-       X->V
-       Y->V
-       X->W
-       Y->W
+       Y->Z X->Z
+       Y->U X->U
+       X->V Y->V
+       X->W Y->W
        }              
         ")
 tidy_dag <- tidy_dagitty(dag)
@@ -183,7 +178,7 @@ ggdag(tidy_dag)+theme_dag()
 
 Under this assumption, the pdf of the joint distribution is: $$
 \begin{aligned}
-&f(x,y,u,v,w)=f_Y(y)f_{X|Y}(x)f_{Z|X,Y}(z)f_{U|X,Y}(u)f_{V|X,Y}(v)f_{W|X,Y}(w)
+&f(x,y,u,v,w)=f_Y(y)f_{X|Y}(x|y)f_{Z|X,Y}(z|x,y)f_{U|X,Y}(u|x,y)f_{V|X,Y}(v|x,y)f_{W|X,Y}(w|x,y)
 \end{aligned}
 $$
 
@@ -225,13 +220,13 @@ With a shape parameter $\alpha_{XY}>0$ and a scale parameter $\beta_{XY}>0$ deci
 5.  $V$ represents the amount of screen time the person spends in each of the 24 hours on September 1, 2023. 
 
 In each of the 24 hours, we assume the screen time (in hour unit) $V_i|X\land Y$ follow a beta distribution $Beta(\alpha_{XY},\beta_{XY})$ ranging from (0,1). For simplicity, we assume the screen time of each hour is independent and follows the beta distribution with the same parameters $\alpha_{XY}>0,\beta_{XY}>0$ once $X$ and $Y$ are given. 
-So $\mathbf{V}|X,Y$ is a vector random variable with the distribution $$
+So $\mathbf{V}|X,Y$ is a random vector with the distribution $$
 \begin{aligned}
-    &\mathbf{V}|X\land Y = (V_1|X\land Y, V_2|X\land Y, \ldots, V_{24}|X\land Y) \\
-    &\text{where } V_i|X\land Y \sim Beta(\alpha_{XY}, \beta_{XY}), \quad i.i.d.\\
+    &\mathbf{V}|X, Y = (V_1|X, Y, V_2|X, Y, \ldots, V_{24}|X, Y) \\
+    &\text{where } V_i|X, Y \sim Beta(\alpha_{XY}, \beta_{XY}), \quad i.i.d.\\
 \end{aligned}
     $$ The pdf of the joint distribution of $\mathbf{V}|X\land Y$is 
-    $$f(\mathbf{V}|X \land Y) = \prod_{i=1}^{24} \frac{v_i^{\alpha_{XY} - 1} (1 - v_i)^{\beta_{XY} - 1}}{B(\alpha_{XY}, \beta_{XY})}
+    $$f(\mathbf{V}|X , Y) = \prod_{i=1}^{24} \frac{v_i^{\alpha_{XY} - 1} (1 - v_i)^{\beta_{XY} - 1}}{B(\alpha_{XY}, \beta_{XY})}
     $$
 
 6. $W$ represents a passport photo of the person.
@@ -253,6 +248,9 @@ w_{ijR}|X,Y \sim BetaBin(255, \alpha_{XY},\beta_{XY})
 \end{aligned}
 $$
 where $\alpha_{XY}>0,\beta_{XY}>0$.
+
+**Note**: Each term, such as $\alpha_{XY}$, $n_Y$, and so forth, as mentioned above, represents that the value of these parameters are related to the random variables indicated in their subscripts (i.e. some function of these random variables). In this convention, we aim to express the properties of conditional probability explicitly and comprehensibly.
+
 
 ## Problem 4
 
@@ -302,7 +300,7 @@ Posterior of $\theta$ is $$
 p(\theta|T_1, T_2) =  \frac{p(T_1, T_2|\theta)p(\theta)}{p(T_1, T_2)}
 $$ we have $$
 \begin{aligned}
-P(\theta=0.6|T_1, T_2)&=\frac{(1-0.6)*(1-0.6)*1/2}{0.6*0.6*1/2+0.4*0.4*1/2}=\frac{4}{13}, 
+P(\theta=0.6|T_1, T_2)&=\frac{(1-0.6)\times (1-0.6) \times 1/2}{0.6\times 0.6 \times 1/2+0.4 \times 0.4 \times 1/2}=\frac{4}{13}, 
 \\P(\theta=0.4|T_1, T_2)&=1-P(\theta=0.4|T_1, T_2)=\frac{9}{13}
 \end{aligned}
 $$
@@ -315,8 +313,8 @@ $$ $$
 $$ Therefore $$
 \begin{aligned}
 \mathbb{E}(Y|T_1, T_2)
-&=\mathbb{E}(\mathbb{E}(Y|\theta)|T_1, T_2)\\
-&=\Sigma_{\theta} P(\theta|T_1, T_2)\cdot \mathbb{E}\left( \left.Y \right|T_1, T_2,\theta \right)\\
+&=\mathbb{E}(\mathbb{E}(Y|\theta,T_1,T_2)|T_1, T_2)\\
+&=\sum\nolimits_{\theta} P(\theta|T_1, T_2)\cdot \mathbb{E}\left( \left.Y \right|\theta \right)\\
 &=P(\theta=0.6|T_1, T_2)\cdot\frac{1}{0.6} + P(\theta=0.4|T_1, T_2)\cdot\frac{1}{0.4}\\
 &=\frac{4}{13}\cdot\frac{1}{0.6}+\frac{9}{13}\cdot \frac{1}{0.4}\\
 &=\frac{175}{78}\\
