--- a/HW1/hw1.Rmd
+++ b/HW1/hw1.Rmd
@@ -27,6 +27,9 @@ knitr::opts_chunk$set(
 )
 ```
 
+We contribute to each of the problem equally by finishing them individually and having a discussion to agree on the answers. And we improved our solution to Problem 3 together during the discussion.
+
+
 ## Problem 1
 
 Since a population is partitioned into disjoint groups, we should have
